Set standard icon size and fix icons on ios

--- a/app/components/Header/Header.css
+++ b/app/components/Header/Header.css
@@ -19,7 +19,6 @@
 .buttonGroup img {
   border: 0;
   color: var(--lego-text-gray);
-  font-size: 40px;
   cursor: pointer;
   transition: color 0.3s;
 
