--- a/app/components/Search/Search.css
+++ b/app/components/Search/Search.css
@@ -43,7 +43,6 @@
 }
 
 .searchResultItemIcon {
-  font-size: 40px;
   margin-right: 10px;
 }
 
@@ -54,7 +53,6 @@
   background: transparent;
   color: #333;
   cursor: pointer;
-  font-size: 40px;
 }
 
 .resultsContainer {
